--- a/payment-success.css
+++ b/payment-success.css
@@ -71,16 +71,27 @@ footer {
 
 
 /* Success Icon Color */
+
 .status-icon {
-    background-color: #f0fdf4; 
-    color: #16a34a;         
-    border: 1.5px solid #dcfce7;
+    width: 70px;
+    height: 70px;
+    background-color: #f0fdf4;
+    color: #16a34a;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 26px;
+    margin: 0 auto 25px;
 }
 
 /* Success Information Box */
+
 .success-box {
     background-color: #f9fafb;
-    border: 1px solid #f3f4f6;
+    padding: 20px;
+    border-radius: 16px;
+    margin-bottom: 30px;
     border-left: 4px solid #16a34a; 
 }
 
