--- a/vendor-style.css
+++ b/vendor-style.css
@@ -12,7 +12,14 @@ html, body {
 body {
     background-color: #f5f5f5;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+                url('https://images.unsplash.com/photo-1739857829959-78c5a13d11f7?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat; 
 }
 
 
