--- a/css/payment-success.css
+++ b/css/payment-success.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    font-family: 'Inter', -apple-system, system-ui, sans-serif;
+  font-family: 'DM Sans', sans-serif;
     background-color: #f9fafb;
     display: flex;
     flex-direction: column;
